--- a/Assignment 3/My_Blog.html
+++ b/Assignment 3/My_Blog.html
@@ -47,24 +47,21 @@
 			</div>
 			<div class="box">
 				<div class="box2"><h2 style="font-weight: normal; font-size: 20px; padding-left: 2px;">Popular Posts</h2></div>
-					<div class="pic3 hov">
+					<div class="pic3 hov hove">
 						<img src="https://www.w3schools.com/w3images/workshop.jpg" class="pic4" height="50" width="50">
                         <span style="font-size: 18px; padding-left: 15px;">Lorem</span><br>
 				        <span style="padding-left: 15px;">Sed mattis nunc</span>
 					</div>
-					<hr>
-					<div class="pic3 hov">
+					<div class="pic3 hov hove">
 						<img src="https://www.w3schools.com/w3images/gondol.jpg" class="pic4" height="50" width="50">
                         <span style="font-size: 18px; padding-left: 15px;">Ipsum</span><br>
 				        <span style="padding-left: 15px;">Praes tinci sed</span>
 					</div>
-					<hr>
-					<div class="pic3 hov">
+					<div class="pic3 hov hove">
 						<img src="https://www.w3schools.com/w3images/skies.jpg" class="pic4" height="50" width="50">	
 					    <span style="font-size: 18px; padding-left: 15px;">Dorum</span><br>
 				        <span style="padding-left: 15px;">Ultricies congue</span>
 					</div>
-					<hr>
 					<div class="pic3 hov">
 						<img src="https://www.w3schools.com/w3images/rock.jpg" class="pic4" height="50" width="50">		
 					    <span style="font-size: 18px; padding-left: 15px;">Mingsum</span><br>
