--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		    <a href="./Assignment 1/demo.html" class="btn btn-primary text-center mr-3 px-5">Assignment 1</a>
 		    <a href="./Assignment 2/contact.html" class="btn btn-primary text-center mr-3 px-5">Assignment 2</a>
 		    <a href="./Assignment 3/My_Blog.html" class="btn btn-primary text-center mr-3 px-5">Assignment 3</a>
-		    <a href="./Assignmnet 4/Template.html" class="btn btn-primary text-center px-5">Assignment 4</a>
+		    <a href="./Assignment 4/Template.html" class="btn btn-primary text-center px-5">Assignment 4</a>
 		</div>
 	</div>
 </body>
