--- a/index.html
+++ b/index.html
@@ -3,16 +3,41 @@
 <head>
 	<title>OSD Assignments</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+	<style>
+		.back{
+			background-image: url("https://cdn.wallpapersafari.com/74/5/JRZCgv.jpg");
+			background-repeat: no-repeat;
+			padding-top: 250px;
+		}
+	</style>
 </head>
-<body>
-	<header class="display-1 text-center bg-warning py-5 mt-5 mb-5">OSD Assignments</header>
+<body class="back">
+	<header class="display-1 text-center bg-info py-4 mb-5 text-white">OSD Assignments</header>
 	<div class="container px-5">
-		<div class="row">
-		    <a href="./Assignment 1/demo.html" class="btn btn-primary text-center mr-3 px-5">Assignment 1</a>
-		    <a href="./Assignment 2/contact.html" class="btn btn-primary text-center mr-3 px-5">Assignment 2</a>
-		    <a href="./Assignment 3/My_Blog.html" class="btn btn-primary text-center mr-3 px-5">Assignment 3</a>
-		    <a href="./Assignment 4/Template.html" class="btn btn-primary text-center px-5">Assignment 4</a>
+		<div class="row justify-content-between">
+			<div class="col-md-2">
+		        <a href="./Assignment_1/demo.html" class="btn btn-dark text-center btn-block">Assignment 1</a>
+		    </div>
+		    <div class="col-md-2">
+		        <a href="./Assignment_2/contact.html" class="btn btn-dark text-center btn-block">Assignment 2</a>
+		    </div>
+		    <div class="col-md-2">
+		        <a href="./Assignment_3/My_Blog.html" class="btn btn-dark text-center btn-block">Assignment 3</a>
+		    </div>
+		    <div class="col-md-2">
+		        <a href="./Assignment_4/Template.html" class="btn btn-dark text-center btn-block">Assignment 4</a>
+		    </div>
+		    <div class="col-md-2">
+		        <a href="./Assignment_5/index.html" class="btn btn-dark text-center btn-block">Assignment 5</a>
+		    </div>
 		</div>
 	</div>
+
+
+
+	
 </body>
 </html>
