--- a/Assignment_5/FloatsPosition.html
+++ b/Assignment_5/FloatsPosition.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 	<title>Bootstrap Sandbox</title>
+
+	<!--Bootstrap CDN-->
+
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
 </head>
 <body>
 	
@@ -13,92 +15,120 @@
 		<h1 class="display-3 my-4 text-center">Floats & Fixed Positions</h1>
 		<div class="container mb-3">
 			<div class="row">
-        <div class="col-md-3">
-			<div class="dropdown">
-				<button class="btn btn-primary dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">2: Utilities</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<a class="dropdown-item" href="./BasicTypography.html">2.2 Basic Typography</a>
-					<a class="dropdown-item" href="./TextAlignment.html">2.3 Text Alignmnet & Display</a>
-					<a class="dropdown-item" href="./FloatsPosition.html">2.4 Floats & Position</a>
-					<a class="dropdown-item" href="ColorsBackground.html">2.5 Colors & Background</a>
-					<a class="dropdown-item" href="./Spacing.html">2.6 Spacing</a>
-					<a class="dropdown-item" href="./SizingBorder.html">2.7 Sizing</a>
-					<a class="dropdown-item" href="./Breakpoints.html">2.8 Breakpoints</a>
+				<div class="col-md-3">
+					<div class="dropdown">
+						<button class="btn btn-primary dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">2: Utilities</button>
+						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+							<a class="dropdown-item" href="./BasicTypography.html">2.2 Basic Typography</a>
+							<a class="dropdown-item" href="./TextAlignment.html">2.3 Text Alignmnet & Display</a>
+							<a class="dropdown-item" href="./FloatsPosition.html">2.4 Floats & Position</a>
+							<a class="dropdown-item" href="ColorsBackground.html">2.5 Colors & Background</a>
+							<a class="dropdown-item" href="./Spacing.html">2.6 Spacing</a>
+							<a class="dropdown-item" href="./SizingBorder.html">2.7 Sizing</a>
+							<a class="dropdown-item" href="./Breakpoints.html">2.8 Breakpoints</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="dropdown">
+						<button class="btn btn-success dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown">3: CSS Components</button>
+						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+							<a class="dropdown-item" href="./Button.html">3.2 Buttons</a>
+							<a class="dropdown-item" href="./Navbar.html">3.3 Navbar</a>
+							<a class="dropdown-item" href="./ListGroups.html">3.4 List Groups & Badges</a>
+							<a class="dropdown-item" href="./Forms.html">3.5 Forms</a>
+							<a class="dropdown-item" href="./InputGroups.html">3.6 Input Groups</a>
+							<a class="dropdown-item" href="./Alerts.html">3.7 Alerts & Progress</a>
+							<a class="dropdown-item" href="./TablePagination.html">3.8 Tables & Pagination</a>
+							<a class="dropdown-item" href="./Cards.html">3.9 Cards</a>
+							<a class="dropdown-item" href="./MediaObjects.html">3.10 Media Objects</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="dropdown">
+						<button class="btn btn-warning dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown">4: Grid & Flexbox</button>
+						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+							<a class="dropdown-item" href="./GridSystem.html">4.2 Grid System</a>
+							<a class="dropdown-item" href="./GridAlignment.html">4.3 Grid Alignment</a>
+							<a class="dropdown-item" href="./Flexbox.html">4.4 Flexbox</a>
+							<a class="dropdown-item" href="">4.5 Auto Margins & Wrap</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="dropdown">
+						<button type="button" class="btn btn-danger dropdown-toggle btn-block" id="dropdownMenuLink" data-toggle="dropdown">5: JavaScript Widgets</button>
+						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+							<a class="dropdown-item" href="./Carousel.html">5.2 Carousel</a>
+							<a class="dropdown-item" href="./Collapse.html">5.3 Collapse</a>
+							<a class="dropdown-item" href="./Tooltips.html">5.4 Tooltips</a>
+							<a class="dropdown-item" href="./Popovers.html">5.5 Popovers</a>
+							<a class="dropdown-item" href="./Modals.html">5.6 Modals</a>
+						</div>
+					</div>
 				</div>
 			</div>
-    </div>
-           <div class="col-md-3">
-            <div class="dropdown">
-				<button class="btn btn-success dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown">3: CSS Components</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<a class="dropdown-item" href="./Button.html">3.2 Buttons</a>
-					<a class="dropdown-item" href="./Navbar.html">3.3 Navbar</a>
-					<a class="dropdown-item" href="./ListGroups.html">3.4 List Groups & Badges</a>
-					<a class="dropdown-item" href="./Forms.html">3.5 Forms</a>
-					<a class="dropdown-item" href="./InputGroups.html">3.6 Input Groups</a>
-					<a class="dropdown-item" href="./Alerts.html">3.7 Alerts & Progress</a>
-					<a class="dropdown-item" href="./TablePagination.html">3.8 Tables & Pagination</a>
-					<a class="dropdown-item" href="./Cards.html">3.9 Cards</a>
-					<a class="dropdown-item" href="./MediaObjects.html">3.10 Media Objects</a>
-				</div>
-			</div>
-    </div>
-     <div class="col-md-3">
-			<div class="dropdown">
-				<button class="btn btn-warning dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown">4: Grid & Flexbox</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<a class="dropdown-item" href="./GridSystem.html">4.2 Grid System</a>
-					<a class="dropdown-item" href="./GridAlignment.html">4.3 Grid Alignment</a>
-					<a class="dropdown-item" href="./Flexbox.html">4.4 Flexbox</a>
-					<a class="dropdown-item" href="">4.5 Auto Margins & Wrap</a>
-				</div>
-			</div>
-    </div>
-     <div class="col-md-3">
-			<div class="dropdown">
-				<button type="button" class="btn btn-danger dropdown-toggle btn-block" id="dropdownMenuLink" data-toggle="dropdown">5: JavaScript Widgets</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<a class="dropdown-item" href="./Carousel.html">5.2 Carousel</a>
-					<a class="dropdown-item" href="./Collapse.html">5.3 Collapse</a>
-					<a class="dropdown-item" href="./Tooltips.html">5.4 Tooltips</a>
-					<a class="dropdown-item" href="./Popovers.html">5.5 Popovers</a>
-					<a class="dropdown-item" href="./Modals.html">5.6 Modals</a>
-				</div>
-			</div>
-    </div>
-        </div>
 		</div>
 	</header>
 	<hr>
-	<div class="container" style="margin-bottom: 500px;">
-		<div class="float-left">Float left</div><br>
-        <div class="float-right">Float right</div><br>
-        <div class="float-none">Float none</div>
-        <div class="float-sm-right">Float right on small or wider</div><br>
-        <div class="float-md-right">Float right on medium or wider</div><br>
-        <div class="float-lg-right">Float right on large or wider</div><br>
-        <div class="float-xl-right">Float right on extra-large or wider</div><br>
-        <div class="float-sm-left">Float left on small or wider</div><br>
-        <div class="float-md-left">Float left on medium or wider</div><br>
-        <div class="float-lg-left">Float left on large or wider</div><br>
-        <div class="float-xl-left">Float left on extra-large or wider</div><br>
-        <div class="float-sm-none">Float none on small or wider</div><br>
-        <div class="float-md-none">Float none on medium or wider</div><br>
-        <div class="float-lg-none">Float none on large or wider</div><br>
-        <div class="float-xl-none">Float none on extra-large or wider</div><br>
 
-        <h3 class="fixed-top">Fixed Top</h3>
-        <h3 class="fixed-bottom">Fixed Bottom</h3>
-        <br>
-        <br>
-        <div class="bg-success clearfix">
-        	<button class="float-right">Float Right</button>
-        	<button class="float-left">Float Left</button>
-        </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae iure natus, fuga provident molestias, voluptates molestiae aperiam sit dicta a assumenda nesciunt quos adipisci reprehenderit animi ipsum unde quasi nobis veniam, modi. Fuga natus harum, maxime corporis rerum, maiores delectus aliquam aut quo incidunt dignissimos temporibus? Vitae dolorem accusamus voluptatibus illo aut nam praesentium obcaecati quaerat cupiditate distinctio tempora eius esse fuga, repellat fugit harum quia nihil sit in debitis expedita. Eos, voluptates eum rem voluptatum tempore accusamus soluta enim, animi in voluptatibus aliquam distinctio totam repudiandae necessitatibus quidem consequatur incidunt aliquid ad! Inventore ratione, consequatur eligendi iusto esse iure officia praesentium magni in! Nemo tempora, voluptatem facilis reprehenderit minima reiciendis alias similique est rem debitis id expedita voluptatum porro fugiat magni inventore neque.</p>
-        <h3 class="sticky-top">Sticky</h3>
-        <p>Est molestias sunt quae quibusdam sequi odit, iusto expedita tempore aspernatur ipsum, necessitatibus rerum debitis, harum, voluptatibus dolorem. Reprehenderit ex aperiam tempore. Cumque ut iste ullam non pariatur, qui architecto, commodi illo praesentium debitis similique, molestiae harum distinctio inventore incidunt enim atque repudiandae eius molestias exercitationem tempore odio dignissimos iusto officia. Libero quasi dicta quos est eveniet magni deserunt aut vero id ad, incidunt nostrum provident tempora modi placeat voluptatem, quod excepturi ipsam aspernatur necessitatibus molestias possimus veritatis sequi. Minus ducimus maiores debitis, nulla magni eum ratione numquam deleniti sunt et dolorum necessitatibus cumque fugit libero recusandae impedit, quaerat, nemo. Vel temporibus amet alias mollitia aspernatur error sint, doloremque, porro blanditiis quia atque ratione reiciendis, praesentium sed doloribus excepturi. Eius tenetur quis veniam enim atque fugit, a itaque dignissimos iusto, tempore fugiat minima libero quasi exercitationem corrupti nam sequi, doloremque quae repudiandae quisquam iure nisi totam consectetur. Corrupti corporis doloribus dolore iusto perspiciatis ipsum, enim sapiente nobis ullam delectus aperiam eaque harum sequi porro! Reprehenderit hic dolores repellat deleniti, illo nostrum nam at odio quasi quis eaque asperiores culpa doloremque ad velit ullam ratione omnis quae adipisci autem necessitatibus. Quod nam non maiores assumenda quae eius nobis cum suscipit, optio aliquid beatae modi tempora delectus voluptatibus debitis earum natus amet libero itaque quasi expedita, maxime repudiandae! Repudiandae sunt similique eum, provident deserunt vitae. Maxime nostrum, nemo quia eius rerum quas recusandae. Molestiae ullam dignissimos illo eum necessitatibus culpa ea, distinctio maiores molestias aliquam, eligendi soluta cumque odio quaerat cupiditate similique in accusamus dolorum nobis. Ea, rem fugit. Minima quae magni laboriosam possimus corporis quidem recusandae aspernatur dignissimos accusamus adipisci, maiores, tenetur excepturi doloremque eum consequuntur? Expedita possimus sit, vel neque fugiat quo ab? Quaerat alias, molestias rerum repudiandae, iste, voluptatem consequatur ex enim tenetur quidem expedita, provident vel reiciendis. Ea ipsam suscipit ex ab nulla est, aspernatur nesciunt consequatur cumque laudantium. Unde ab earum eius vero obcaecati reiciendis omnis quod culpa harum, modi, possimus molestiae voluptatibus beatae, minima ad accusamus quibusdam! Dolor nostrum impedit culpa nemo expedita, numquam dignissimos totam ex reprehenderit consectetur neque dicta deserunt, recusandae porro ipsa accusamus maxime soluta eum facilis temporibus nesciunt accusantium. Placeat provident facere blanditiis doloremque eos tempora officia doloribus deserunt molestias voluptates velit hic, tenetur cupiditate ab. Hic, unde!</p>
+	<div class="container" style="margin-bottom: 500px;">
+
+		<div class="float-left">Float left</div><br>
+
+		<div class="float-right">Float right</div><br>
+
+		<div class="float-none">Float none</div>
+
+		<div class="float-sm-right">Float right on small or wider</div><br>
+
+		<div class="float-md-right">Float right on medium or wider</div><br>
+
+		<div class="float-lg-right">Float right on large or wider</div><br>
+
+		<div class="float-xl-right">Float right on extra-large or wider</div><br>
+
+		<div class="float-sm-left">Float left on small or wider</div><br>
+
+		<div class="float-md-left">Float left on medium or wider</div><br>
+
+		<div class="float-lg-left">Float left on large or wider</div><br>
+
+		<div class="float-xl-left">Float left on extra-large or wider</div><br>
+
+		<div class="float-sm-none">Float none on small or wider</div><br>
+
+		<div class="float-md-none">Float none on medium or wider</div><br>
+
+		<div class="float-lg-none">Float none on large or wider</div><br>
+
+		<div class="float-xl-none">Float none on extra-large or wider</div><br>
+
+		<h3 class="fixed-top">Fixed Top</h3>
+
+		<h3 class="fixed-bottom">Fixed Bottom</h3>		
+		<br>
+		<br>
+
+		<div class="bg-success clearfix">
+			<button class="float-right">Float Right</button>
+			<button class="float-left">Float Left</button>
+		</div>
+
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae iure natus, fuga provident molestias, voluptates molestiae aperiam sit dicta a assumenda nesciunt quos adipisci reprehenderit animi ipsum unde quasi nobis veniam, modi. Fuga natus harum, maxime corporis rerum, maiores delectus aliquam aut quo incidunt dignissimos temporibus? Vitae dolorem accusamus voluptatibus illo aut nam praesentium obcaecati quaerat cupiditate distinctio tempora eius esse fuga, repellat fugit harum quia nihil sit in debitis expedita. Eos, voluptates eum rem voluptatum tempore accusamus soluta enim, animi in voluptatibus aliquam distinctio totam repudiandae necessitatibus quidem consequatur incidunt aliquid ad! Inventore ratione, consequatur eligendi iusto esse iure officia praesentium magni in! Nemo tempora, voluptatem facilis reprehenderit minima reiciendis alias similique est rem debitis id expedita voluptatum porro fugiat magni inventore neque.</p>
+
+		<h3 class="sticky-top">Sticky</h3>
+
+		<p>Est molestias sunt quae quibusdam sequi odit, iusto expedita tempore aspernatur ipsum, necessitatibus rerum debitis, harum, voluptatibus dolorem. Reprehenderit ex aperiam tempore. Cumque ut iste ullam non pariatur, qui architecto, commodi illo praesentium debitis similique, molestiae harum distinctio inventore incidunt enim atque repudiandae eius molestias exercitationem tempore odio dignissimos iusto officia. Libero quasi dicta quos est eveniet magni deserunt aut vero id ad, incidunt nostrum provident tempora modi placeat voluptatem, quod excepturi ipsam aspernatur necessitatibus molestias possimus veritatis sequi. Minus ducimus maiores debitis, nulla magni eum ratione numquam deleniti sunt et dolorum necessitatibus cumque fugit libero recusandae impedit, quaerat, nemo. Vel temporibus amet alias mollitia aspernatur error sint, doloremque, porro blanditiis quia atque ratione reiciendis, praesentium sed doloribus excepturi. Eius tenetur quis veniam enim atque fugit, a itaque dignissimos iusto, tempore fugiat minima libero quasi exercitationem corrupti nam sequi, doloremque quae repudiandae quisquam iure nisi totam consectetur. Corrupti corporis doloribus dolore iusto perspiciatis ipsum, enim sapiente nobis ullam delectus aperiam eaque harum sequi porro! Reprehenderit hic dolores repellat deleniti, illo nostrum nam at odio quasi quis eaque asperiores culpa doloremque ad velit ullam ratione omnis quae adipisci autem necessitatibus. Quod nam non maiores assumenda quae eius nobis cum suscipit, optio aliquid beatae modi tempora delectus voluptatibus debitis earum natus amet libero itaque quasi expedita, maxime repudiandae! Repudiandae sunt similique eum, provident deserunt vitae. Maxime nostrum, nemo quia eius rerum quas recusandae. Molestiae ullam dignissimos illo eum necessitatibus culpa ea, distinctio maiores molestias aliquam, eligendi soluta cumque odio quaerat cupiditate similique in accusamus dolorum nobis. Ea, rem fugit. Minima quae magni laboriosam possimus corporis quidem recusandae aspernatur dignissimos accusamus adipisci, maiores, tenetur excepturi doloremque eum consequuntur? Expedita possimus sit, vel neque fugiat quo ab? Quaerat alias, molestias rerum repudiandae, iste, voluptatem consequatur ex enim tenetur quidem expedita, provident vel reiciendis. Ea ipsam suscipit ex ab nulla est, aspernatur nesciunt consequatur cumque laudantium. Unde ab earum eius vero obcaecati reiciendis omnis quod culpa harum, modi, possimus molestiae voluptatibus beatae, minima ad accusamus quibusdam! Dolor nostrum impedit culpa nemo expedita, numquam dignissimos totam ex reprehenderit consectetur neque dicta deserunt, recusandae porro ipsa accusamus maxime soluta eum facilis temporibus nesciunt accusantium. Placeat provident facere blanditiis doloremque eos tempora officia doloribus deserunt molestias voluptates velit hic, tenetur cupiditate ab. Hic, unde!</p>
+
 	</div>
+
+	<!--Scripts-->
+
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
 </body>
 </html>
