--- a/Assignment_5/GridSystem.html
+++ b/Assignment_5/GridSystem.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 	<title>Bootstrap Sandbox</title>
+
+  <!--Bootstrap CDN-->
+
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  
 </head>
 <body>
 	
@@ -14,227 +16,167 @@
 		<div class="container mb-3">
       <div class="row">
         <div class="col-md-3">
-      <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">2: Utilities</button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="./BasicTypography.html">2.2 Basic Typography</a>
-          <a class="dropdown-item" href="./TextAlignment.html">2.3 Text Alignmnet & Display</a>
-          <a class="dropdown-item" href="./FloatsPosition.html">2.4 Floats & Position</a>
-          <a class="dropdown-item" href="ColorsBackground.html">2.5 Colors & Background</a>
-          <a class="dropdown-item" href="./Spacing.html">2.6 Spacing</a>
-          <a class="dropdown-item" href="./SizingBorder.html">2.7 Sizing</a>
-          <a class="dropdown-item" href="./Breakpoints.html">2.8 Breakpoints</a>
+          <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">2: Utilities</button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="./BasicTypography.html">2.2 Basic Typography</a>
+              <a class="dropdown-item" href="./TextAlignment.html">2.3 Text Alignmnet & Display</a>
+              <a class="dropdown-item" href="./FloatsPosition.html">2.4 Floats & Position</a>
+              <a class="dropdown-item" href="ColorsBackground.html">2.5 Colors & Background</a>
+              <a class="dropdown-item" href="./Spacing.html">2.6 Spacing</a>
+              <a class="dropdown-item" href="./SizingBorder.html">2.7 Sizing</a>
+              <a class="dropdown-item" href="./Breakpoints.html">2.8 Breakpoints</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="dropdown">
+            <button class="btn btn-success dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown">3: CSS Components</button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="./Button.html">3.2 Buttons</a>
+              <a class="dropdown-item" href="./Navbar.html">3.3 Navbar</a>
+              <a class="dropdown-item" href="./ListGroups.html">3.4 List Groups & Badges</a>
+              <a class="dropdown-item" href="./Forms.html">3.5 Forms</a>
+              <a class="dropdown-item" href="./InputGroups.html">3.6 Input Groups</a>
+              <a class="dropdown-item" href="./Alerts.html">3.7 Alerts & Progress</a>
+              <a class="dropdown-item" href="./TablePagination.html">3.8 Tables & Pagination</a>
+              <a class="dropdown-item" href="./Cards.html">3.9 Cards</a>
+              <a class="dropdown-item" href="./MediaObjects.html">3.10 Media Objects</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="dropdown">
+            <button class="btn btn-warning dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown">4: Grid & Flexbox</button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="./GridSystem.html">4.2 Grid System</a>
+              <a class="dropdown-item" href="./GridAlignment.html">4.3 Grid Alignment</a>
+              <a class="dropdown-item" href="./Flexbox.html">4.4 Flexbox</a>
+              <a class="dropdown-item" href="./AutoMargin.html">4.5 Auto Margins & Wrap</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="dropdown">
+            <button type="button" class="btn btn-danger dropdown-toggle btn-block" id="dropdownMenuLink" data-toggle="dropdown">5: JavaScript Widgets</button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="./Carousel.html">5.2 Carousel</a>
+              <a class="dropdown-item" href="./Collapse.html">5.3 Collapse</a>
+              <a class="dropdown-item" href="./Tooltips.html">5.4 Tooltips</a>
+              <a class="dropdown-item" href="./Popovers.html">5.5 Popovers</a>
+              <a class="dropdown-item" href="./Modals.html">5.6 Modals</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-           <div class="col-md-3">
-            <div class="dropdown">
-        <button class="btn btn-success dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown">3: CSS Components</button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="./Button.html">3.2 Buttons</a>
-          <a class="dropdown-item" href="./Navbar.html">3.3 Navbar</a>
-          <a class="dropdown-item" href="./ListGroups.html">3.4 List Groups & Badges</a>
-          <a class="dropdown-item" href="./Forms.html">3.5 Forms</a>
-          <a class="dropdown-item" href="./InputGroups.html">3.6 Input Groups</a>
-          <a class="dropdown-item" href="./Alerts.html">3.7 Alerts & Progress</a>
-          <a class="dropdown-item" href="./TablePagination.html">3.8 Tables & Pagination</a>
-          <a class="dropdown-item" href="./Cards.html">3.9 Cards</a>
-          <a class="dropdown-item" href="./MediaObjects.html">3.10 Media Objects</a>
-        </div>
-      </div>
-    </div>
-     <div class="col-md-3">
-      <div class="dropdown">
-        <button class="btn btn-warning dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown">4: Grid & Flexbox</button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="./GridSystem.html">4.2 Grid System</a>
-          <a class="dropdown-item" href="./GridAlignment.html">4.3 Grid Alignment</a>
-          <a class="dropdown-item" href="./Flexbox.html">4.4 Flexbox</a>
-          <a class="dropdown-item" href="./AutoMargin.html">4.5 Auto Margins & Wrap</a>
-        </div>
-      </div>
-    </div>
-     <div class="col-md-3">
-      <div class="dropdown">
-        <button type="button" class="btn btn-danger dropdown-toggle btn-block" id="dropdownMenuLink" data-toggle="dropdown">5: JavaScript Widgets</button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="./Carousel.html">5.2 Carousel</a>
-          <a class="dropdown-item" href="./Collapse.html">5.3 Collapse</a>
-          <a class="dropdown-item" href="./Tooltips.html">5.4 Tooltips</a>
-          <a class="dropdown-item" href="./Popovers.html">5.5 Popovers</a>
-          <a class="dropdown-item" href="./Modals.html">5.6 Modals</a>
-        </div>
-      </div>
-    </div>
-        </div>
-    </div>
-	</header>
-	<hr>
-	<div class="container">
+  </header>
+  <hr>
 
-		<div class="row">
-  <div class="col-10" style="border: 1px solid black;">
-  	<ul>
-  	<li>6 column on small screens</li>
-<li>8 column on medium screen</li>
-<li>9 column on large screen</li>
-<li>10 column on xlarge screen</li></ul>
-  </div>
-  <div class="col-2" style="border: 1px solid black;">
-  	<ul>
-  	<li>6 column on small screens</li>
-<li>8 column on medium screen</li>
-<li>3 column on large screen</li>
-<li>2 column on xlarge screen</li></ul>
-  </div>
-</div>
-</div>
+  <div class="container">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="container">
-		<div class="row">
-    <div class="col" style="border: 1px solid black;">
-      Equal Width
-    </div>
-    <div class="col" style="border: 1px solid black;">
-      Equal Width
-    </div>
-    <div class="col" style="border: 1px solid black;">
-      Equal Width
-    </div>
-    <div class="col" style="border: 1px solid black;">
-      Equal Width
-    </div>
-  </div>
-</div>
-
-
-
-
-
-<div class="container">
-
-		<div class="row">
-  <div class="col" style="border: 1px solid black;">Equal Width Multiple Columns</div>
-  <div class="col" style="border: 1px solid black;">Equal Width Multiple Columns</div>
-  <div class="w-100"></div>
-  <div class="col" style="border: 1px solid black;">Equal Width Multiple Columns</div>
-  <div class="col" style="border: 1px solid black;">Equal Width Multiple Columns</div>
-</div>
-</div>
-
-<div class="container">
-<div class="row">
-    <div class="col-2" style="border: 1px solid black;">
-      Auto Layout
-    </div>
-    <div class="col-6" style="border: 1px solid black;">
-      Auto Layout
-    </div>
-    <div class="col" style="border: 1px solid black;">
-      Auto Layout
-    </div>
-  </div>
-
-
-  <div class="row">
-    <div class="col-sm" style="border: 1px solid black;">
-    Equal Width Stack
-    </div>
-    <div class="col-sm" style="border: 1px solid black;">
-    Equal Width Stack
-    </div>
-    <div class="col-sm" style="border: 1px solid black;">
-    Equal Width Stack
-    </div>
-  </div>
-
-
-  <div class="row">
-    <div class="col-sm" style="border: 1px solid black;">
-    Third
-    </div>
-    <div class="col-sm" style="border: 1px solid black;">
-    Second
-    </div>
-    <div class="col-sm" style="border: 1px solid black;">
-    First
-    </div>
-  </div>
-</div>
- <div class="container">
-  <div class="row">
-  <div class="col-md-4"style="border: 1px solid black;">4 col</div>
-  <div class="col-md-4 offset-md-4"style="border: 1px solid black;">4 col offset 4</div>
-  </div>
-
-
-  <div class="row">
-  <div class="col-md-3 offset-md-3" style="border: 1px solid black;">3 col offset 3</div>
-  <div class="col-md-3 offset-md-3" style="border: 1px solid black;">3 col offset 3</div>
-</div>
-<div class="row">
-  <div class="col-md-6 offset-md-3" style="border: 1px solid black;">6 col offset 3</div>
-</div>
-</div>
-
-<div class="container">
-<div class="row">
-  <div class="col-sm-9" style="border: 1px solid black;">
-    Level 1: .col-sm-9
     <div class="row">
-      <div class="col-8 col-sm-6" style="border: 1px solid red;">
-        Level 2: .col-8 .col-sm-6
+      <div class="col-10" style="border: 1px solid black;">
+        <ul>
+          <li>6 column on small screens</li>
+          <li>8 column on medium screen</li>
+          <li>9 column on large screen</li>
+          <li>10 column on xlarge screen</li>
+        </ul>
       </div>
-      <div class="col-4 col-sm-6" style="border: 1px solid red;">
-        Level 2: .col-4 .col-sm-6
+      <div class="col-2" style="border: 1px solid black;">
+        <ul>
+          <li>6 column on small screens</li>
+          <li>8 column on medium screen</li>
+          <li>3 column on large screen</li>
+          <li>2 column on xlarge screen</li>
+        </ul>
       </div>
     </div>
+
   </div>
-</div>
-</div>
 
+  <div class="container">
 
+      <div class="row">
+        <div class="col" style="border: 1px solid black;">Equal Width</div>
+        <div class="col" style="border: 1px solid black;">Equal Width</div>
+        <div class="col" style="border: 1px solid black;">Equal Width</div>
+        <div class="col" style="border: 1px solid black;">Equal Width</div>
+      </div>
 
+  </div>
 
+  <div class="container">
 
+    <div class="row">
+      <div class="col" style="border: 1px solid black;">Equal Width Multiple Columns</div>
+      <div class="col" style="border: 1px solid black;">Equal Width Multiple Columns</div>
+      <div class="w-100"></div>
+      <div class="col" style="border: 1px solid black;">Equal Width Multiple Columns</div>
+      <div class="col" style="border: 1px solid black;">Equal Width Multiple Columns</div>
+    </div>
 
+  </div>
 
+  <div class="container">
 
+    <div class="row">
+      <div class="col-2" style="border: 1px solid black;">Auto Layout</div>
+      <div class="col-6" style="border: 1px solid black;">Auto Layout</div>
+      <div class="col" style="border: 1px solid black;">Auto Layout</div>
+    </div>
 
+    <div class="row">
+      <div class="col-sm" style="border: 1px solid black;">Equal Width Stack</div>
+      <div class="col-sm" style="border: 1px solid black;">Equal Width Stack</div>
+      <div class="col-sm" style="border: 1px solid black;">Equal Width Stack</div>
+    </div>
 
+    <div class="row">
+      <div class="col-sm" style="border: 1px solid black;">Third</div>
+      <div class="col-sm" style="border: 1px solid black;">Second</div>
+      <div class="col-sm" style="border: 1px solid black;">First</div>
+    </div>
 
+  </div>
 
+  <div class="container">
 
+    <div class="row">
+      <div class="col-md-4"style="border: 1px solid black;">4 col</div>
+      <div class="col-md-4 offset-md-4"style="border: 1px solid black;">4 col offset 4</div>
+    </div>
 
+    <div class="row">
+      <div class="col-md-3 offset-md-3" style="border: 1px solid black;">3 col offset 3</div>
+      <div class="col-md-3 offset-md-3" style="border: 1px solid black;">3 col offset 3</div>
+    </div>
 
+    <div class="row">
+      <div class="col-md-6 offset-md-3" style="border: 1px solid black;">6 col offset 3</div>
+    </div>
 
+  </div>
 
+  <div class="container">
 
+    <div class="row">
+      <div class="col-sm-9" style="border: 1px solid black;">Level 1: .col-sm-9
+        <div class="row">
+          <div class="col-8 col-sm-6" style="border: 1px solid red;">Level 2: .col-8 .col-sm-6</div>
+          <div class="col-4 col-sm-6" style="border: 1px solid red;">Level 2: .col-4 .col-sm-6</div>
+        </div>
+      </div>
+    </div>
 
+  </div>
 
+  <!--Scripts-->
 
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
-
-
-
-
-
-</body>
-</html>
+  </body>
+  </html>
