--- a/Assignment_5/Tooltips.html
+++ b/Assignment_5/Tooltips.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 	<title>Bootstrap Sandbox</title>
+
+	<!--Bootstrap CDN-->
+
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
 </head>
 <body>
 	
@@ -13,105 +15,113 @@
 		<h1 class="display-3 my-4 text-center">Tooltips</h1>
 		<div class="container mb-3">
 			<div class="row">
-        <div class="col-md-3">
-			<div class="dropdown">
-				<button class="btn btn-primary dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">2: Utilities</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<a class="dropdown-item" href="./BasicTypography.html">2.2 Basic Typography</a>
-					<a class="dropdown-item" href="./TextAlignment.html">2.3 Text Alignmnet & Display</a>
-					<a class="dropdown-item" href="./FloatsPosition.html">2.4 Floats & Position</a>
-					<a class="dropdown-item" href="ColorsBackground.html">2.5 Colors & Background</a>
-					<a class="dropdown-item" href="./Spacing.html">2.6 Spacing</a>
-					<a class="dropdown-item" href="./SizingBorder.html">2.7 Sizing</a>
-					<a class="dropdown-item" href="./Breakpoints.html">2.8 Breakpoints</a>
+				<div class="col-md-3">
+					<div class="dropdown">
+						<button class="btn btn-primary dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">2: Utilities</button>
+						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+							<a class="dropdown-item" href="./BasicTypography.html">2.2 Basic Typography</a>
+							<a class="dropdown-item" href="./TextAlignment.html">2.3 Text Alignmnet & Display</a>
+							<a class="dropdown-item" href="./FloatsPosition.html">2.4 Floats & Position</a>
+							<a class="dropdown-item" href="ColorsBackground.html">2.5 Colors & Background</a>
+							<a class="dropdown-item" href="./Spacing.html">2.6 Spacing</a>
+							<a class="dropdown-item" href="./SizingBorder.html">2.7 Sizing</a>
+							<a class="dropdown-item" href="./Breakpoints.html">2.8 Breakpoints</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="dropdown">
+						<button class="btn btn-success dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown">3: CSS Components</button>
+						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+							<a class="dropdown-item" href="./Button.html">3.2 Buttons</a>
+							<a class="dropdown-item" href="./Navbar.html">3.3 Navbar</a>
+							<a class="dropdown-item" href="./ListGroups.html">3.4 List Groups & Badges</a>
+							<a class="dropdown-item" href="./Forms.html">3.5 Forms</a>
+							<a class="dropdown-item" href="./InputGroups.html">3.6 Input Groups</a>
+							<a class="dropdown-item" href="./Alerts.html">3.7 Alerts & Progress</a>
+							<a class="dropdown-item" href="./TablePagination.html">3.8 Tables & Pagination</a>
+							<a class="dropdown-item" href="./Cards.html">3.9 Cards</a>
+							<a class="dropdown-item" href="./MediaObjects.html">3.10 Media Objects</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="dropdown">
+						<button class="btn btn-warning dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown">4: Grid & Flexbox</button>
+						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+							<a class="dropdown-item" href="./GridSystem.html">4.2 Grid System</a>
+							<a class="dropdown-item" href="./GridAlignment.html">4.3 Grid Alignment</a>
+							<a class="dropdown-item" href="./Flexbox.html">4.4 Flexbox</a>
+							<a class="dropdown-item" href="./AutoMargin.html">4.5 Auto Margins & Wrap</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="dropdown">
+						<button type="button" class="btn btn-danger dropdown-toggle btn-block" id="dropdownMenuLink" data-toggle="dropdown">5: JavaScript Widgets</button>
+						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+							<a class="dropdown-item" href="./Carousel.html">5.2 Carousel</a>
+							<a class="dropdown-item" href="./Collapse.html">5.3 Collapse</a>
+							<a class="dropdown-item" href="./Tooltips.html">5.4 Tooltips</a>
+							<a class="dropdown-item" href="./Popovers.html">5.5 Popovers</a>
+							<a class="dropdown-item" href="./Modals.html">5.6 Modals</a>
+						</div>
+					</div>
 				</div>
 			</div>
-    </div>
-           <div class="col-md-3">
-            <div class="dropdown">
-				<button class="btn btn-success dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown">3: CSS Components</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<a class="dropdown-item" href="./Button.html">3.2 Buttons</a>
-					<a class="dropdown-item" href="./Navbar.html">3.3 Navbar</a>
-					<a class="dropdown-item" href="./ListGroups.html">3.4 List Groups & Badges</a>
-					<a class="dropdown-item" href="./Forms.html">3.5 Forms</a>
-					<a class="dropdown-item" href="./InputGroups.html">3.6 Input Groups</a>
-					<a class="dropdown-item" href="./Alerts.html">3.7 Alerts & Progress</a>
-					<a class="dropdown-item" href="./TablePagination.html">3.8 Tables & Pagination</a>
-					<a class="dropdown-item" href="./Cards.html">3.9 Cards</a>
-					<a class="dropdown-item" href="./MediaObjects.html">3.10 Media Objects</a>
-				</div>
-			</div>
-    </div>
-     <div class="col-md-3">
-			<div class="dropdown">
-				<button class="btn btn-warning dropdown-toggle btn-block" type="button" id="dropdownMenuLink" data-toggle="dropdown">4: Grid & Flexbox</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<a class="dropdown-item" href="./GridSystem.html">4.2 Grid System</a>
-					<a class="dropdown-item" href="./GridAlignment.html">4.3 Grid Alignment</a>
-					<a class="dropdown-item" href="./Flexbox.html">4.4 Flexbox</a>
-					<a class="dropdown-item" href="./AutoMargin.html">4.5 Auto Margins & Wrap</a>
-				</div>
-			</div>
-    </div>
-     <div class="col-md-3">
-			<div class="dropdown">
-				<button type="button" class="btn btn-danger dropdown-toggle btn-block" id="dropdownMenuLink" data-toggle="dropdown">5: JavaScript Widgets</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<a class="dropdown-item" href="./Carousel.html">5.2 Carousel</a>
-					<a class="dropdown-item" href="./Collapse.html">5.3 Collapse</a>
-					<a class="dropdown-item" href="./Tooltips.html">5.4 Tooltips</a>
-					<a class="dropdown-item" href="./Popovers.html">5.5 Popovers</a>
-					<a class="dropdown-item" href="./Modals.html">5.6 Modals</a>
-				</div>
-			</div>
-    </div>
-        </div>
 		</div>
 	</header>
 	<hr>
 
 	<div class="container" style="margin-bottom: 500px;">
+
 		<button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Tooltip on top</button>
-        <button type="button" class="btn btn-success" data-toggle="tooltip" data-placement="right" title="Tooltip on right">Tooltip on right</button>
-        <button type="button" class="btn btn-warning" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Tooltip on bottom</button>
-        <button type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Tooltip on left">Tooltip on left</button><br>
-        <button type="button" class="btn btn-primary mt-4" data-toggle="tooltip" id="hello" data-html="true" title="<h3>Hello World</h3><p>Lorem ipsum dolor sit amet.</p><p>Tooltip With HTML</p>">Tooltip with HTML</button>
-        <hr>
-        <button class="btn btn-dark" onclick="showTooltip()">Show tooltip</button>
-        <button class="btn btn-dark" onclick="hideTooltip()">Hide tooltip</button>
-        <button class="btn btn-dark" onclick="toggleTooltip()">Toggle tooltip</button>
+		<button type="button" class="btn btn-success" data-toggle="tooltip" data-placement="right" title="Tooltip on right">Tooltip on right</button>
+		<button type="button" class="btn btn-warning" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Tooltip on bottom</button>
+		<button type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Tooltip on left">Tooltip on left</button><br>
+		<button type="button" class="btn btn-primary mt-4" data-toggle="tooltip" id="hello" data-html="true" title="<h3>Hello World</h3><p>Lorem ipsum dolor sit amet.</p><p>Tooltip With HTML</p>">Tooltip with HTML</button>
+		<hr>
+		<button class="btn btn-dark" onclick="showTooltip()">Show tooltip</button>
+		<button class="btn btn-dark" onclick="hideTooltip()">Hide tooltip</button>
+		<button class="btn btn-dark" onclick="toggleTooltip()">Toggle tooltip</button>
+
 	</div>
-<script>
-	$('[data-toggle="tooltip"]').tooltip();
 
-    function showTooltip(){
-      $('#hello').tooltip('show');
-    }
+	<!--Scripts-->
+	
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+	<script>
+		$('[data-toggle="tooltip"]').tooltip();
 
-    function hideTooltip(){
-      $('#hello').tooltip('hide');
-    }
+		function showTooltip(){
+			$('#hello').tooltip('show');
+		}
 
-    function toggleTooltip(){
-      $('#hello').tooltip('toggle');
-    }
+		function hideTooltip(){
+			$('#hello').tooltip('hide');
+		}
 
-    $('#hello').on('show.bs.tooltip', function(){
-      console.log('Tooltip Show');
-    });
+		function toggleTooltip(){
+			$('#hello').tooltip('toggle');
+		}
 
-    $('#hello').on('shown.bs.tooltip', function(){
-      console.log('Tooltip Shown');
-    });
+		$('#hello').on('show.bs.tooltip', function(){
+			console.log('Tooltip Show');
+		});
 
-    $('#hello').on('hide.bs.tooltip', function(){
-      console.log('Tooltip Hide');
-    });
+		$('#hello').on('shown.bs.tooltip', function(){
+			console.log('Tooltip Shown');
+		});
 
-    $('#hello').on('hidden.bs.tooltip', function(){
-      console.log('Tooltip Hidden');
-    });
-  </script>
+		$('#hello').on('hide.bs.tooltip', function(){
+			console.log('Tooltip Hide');
+		});
+
+		$('#hello').on('hidden.bs.tooltip', function(){
+			console.log('Tooltip Hidden');
+		});
+	</script>
 </body>
 </html>
